Fix buttons turning blue on mobile view

--- a/src/components/MobileMenu/MobileMenu.css
+++ b/src/components/MobileMenu/MobileMenu.css
@@ -31,11 +31,5 @@
 }
 
 .mobile-menu__button {
-  background: none;
-  border: none;
-  font-size: 20px;
-  font-weight: 700;
-  padding: 0;
   margin: 0;
-  cursor: pointer;
 }
