--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -12,9 +12,14 @@
   margin: 0 20px 0 0;
   padding: 0;
   border: none;
+  background: none;
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
   font-weight: inherit;
+  color: inherit;
   cursor: pointer;
+  text-decoration: none;
+  appearance: none;
+  -webkit-appearance: none;
 }
